--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@ body { margin: 0; padding: 0; }
         style: streetstyle + '/draft',
         center: [139.73100, 35.66572],
         zoom: 11.15,
+        hash: true,
         localIdeographFontFamily: "'Noto Sans', 'Noto Sans CJK SC', sans-serif,'Arial Unicode MS Regular'",
         customAttribution: '<a href="https://www.geospatial.jp/ckan/dataset/hinanbasho" target="_blank">国土地理院/AIGID 指定緊急避難場所データ</a> | <a href="https://nlftp.mlit.go.jp/ksj/gml/datalist/KsjTmplt-A40.html" target="_blank">国土交通省 国土数値情報</a>'
 
